--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,6 +6,14 @@ body {
     margin-inline: auto;
 }
 
+header {
+    margin-bottom: 50px;
+}
+
+.space-Below {
+    margin-bottom: 50px;
+}
+
 pre {
     background: #333;
     padding: 10px;
