--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,3 +49,12 @@ math {
 .hidden {
     display: none;
 }
+
+.circuitLabel {
+    font: italic 13px sans-serif;
+    fill: white;
+    paint-order: stroke;
+    stroke: black;
+    stroke-width: 5px;
+    stroke-linejoin: round;
+  }
