Gave the code input dark theme and fixed the docs' cpu example initial value zero support

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,6 +22,12 @@ pre {
     position: relative;
 }
 
+textarea {
+    background: #333;
+    color: white;
+    border-color: #aaa;
+}
+
 button.copy-btn {
     position: absolute;
     top: 5px;
