Added colors to the preset selection buttons

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,3 +74,21 @@ math {
 .inline {
     display: inline;
 }
+
+.blue {
+    background-color: #004;
+    color: white;
+    border-color: black;
+}
+
+.red {
+    background-color: #400;
+    color: white;
+    border-color: black;
+}
+
+.green {
+    background-color: #040;
+    color: white;
+    border-color: black;
+}
