Added initial element hiding to all elements that show generated data for a better user experience upon entering the page for the first time

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,6 +56,10 @@ math {
     display: none;
 }
 
+.initially-hidden {
+    display: none;
+}
+
 .circuitLabel {
     font: italic 13px sans-serif;
     fill: white;
