--- a/styles/styles.css
+++ b/styles/styles.css
@@ -94,8 +94,22 @@ math {
 
 .generator-input-params{
     display: grid;
-    grid-template-columns: 300px 200px;
+    grid-template-columns: 60% 40%;
     row-gap: 10px;
+}
+
+#codeInput {
+    width: 100%;
+}
+
+#generate-button {
+    width: 90%;
+    margin: 10px 5%;
+}
+
+hr {
+    margin-top: 150px;
+    margin-bottom: 30px;
 }
 
 .inline {
@@ -103,25 +117,25 @@ math {
 }
 
 .blue {
-    background-color: #004;
+    background-color: #445;
     color: white;
     border-color: black;
 }
 
 .red {
-    background-color: #400;
+    background-color: #544;
     color: white;
     border-color: black;
 }
 
 .green {
-    background-color: #040;
+    background-color: #454;
     color: white;
     border-color: black;
 }
 
 .data-type-table {
-    table {
+    /* table { */
         border-spacing: 0; 
         /* Removes any default spacing between cells */
         border-collapse: collapse;
@@ -129,7 +143,8 @@ math {
         width: 100%;
         /* Optional: Makes the table fill the container */
         /* color: red; */
-    }
+        background-color: #111;
+    /* } */
 
     /* tr {
         border-spacing: 0;
