Added a small horizontal padding to the page to ensure slim-screen devices don't get text touching the left side of the screen

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,8 @@ body {
     font-family: sans-serif;
     max-width: 800px;
     margin-inline: auto;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 header {
