--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,7 +64,9 @@ nav {
     /* margin-bottom: 50px; */
     /* background-color: #111; */
     a {
-        background-color: transparent;
+        /* background-color: transparent; */
+        /* background-color: rgb(128, 0, 0); */
+        background: linear-gradient(to bottom right, blue, rgb(30, 30, 30));
         color: white;
         display: flex;
         align-items: center;
@@ -74,13 +76,17 @@ nav {
         /* margin: 0 10px; */
         /* margin-inline: auto; */
         /* align-self: center; */
-        border-radius: 5%;
-        /* z-index: 1; */
+        border-radius: 10%;
+        z-index: 1;
+        aspect-ratio: 1;
+        font-size: large;
     }
     .selected {
-        /* background-color: rgba(255, 0, 0, 0.5); */
-        background-image: radial-gradient(rgba(255, 255, 255, 0) 30%, rgb(0, 101, 129));
         /* #003e80 */
+        /* background-color: rgba(255, 0, 0, 0.5); */
+        /* background-image: radial-gradient(rgba(255, 255, 255, 0) 30%, rgb(0, 101, 129)); */
+        filter: drop-shadow(0 0 0.5rem gray);
+        z-index: 1;
     }
 }
 
@@ -89,7 +95,7 @@ nav img {
     height: auto;
     width: 100px;
     height: 100px;
-    border-radius: 5%;
+    border-radius: 10%;
     z-index: -1;
 }
 
