--- a/styles/styles.css
+++ b/styles/styles.css
@@ -98,6 +98,9 @@ nav {
         aspect-ratio: 1;
         font-size: large;
     }
+    a:hover {
+        background: linear-gradient(to bottom right, rgb(87, 87, 255), rgb(30, 30, 30));
+    }
     .selected {
         /* #003e80 */
         /* background-color: rgba(255, 0, 0, 0.5); */
